# mkdocs-blog-offline-main

./: .env_template  .gitignore  README.md  cf_build.sh  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: _headers  about.md  contact.md  copyright.md  index.md  newsletter.md  newsletter_next.md  privacy.md  robots.txt  security-policy.md
docs/.well-known/: security.txt
docs/blog/: .authors.yml  .meta.yml
docs/blog/category/: ai.md  development.md  finance.md  health.md  performance.md  technology.md
docs/blog/posts/: 2024-06-20_new_mkdocs_blog_website.md  2024-07-01_impediments_capture_with_context.md  2024-07-01_jira_queries.md  2024-07-13_design_first_api_development_with_python.md  2024-07-13_how_to_setup_jira_workflow.md  2024-10-21_about_rudiger_wolf.md  2024-11-02_beginning_wingfoiling.md  2024-11-04_ key_factors_that_determine_the_success_of_collaborative_teams.md  2024-11-06_interview_alan_barnard_flow_and_throughput.md  2024-11-07_poogi.md  2024-11-07_quick_vps.md  2024-11-19_managing_your_finances.md  2024-11-19_marketing_professional_services.md  2025-05-20_marimo_notebook.md  2025-06-04_AI_to_add_newsletter_signup_on_cloudflare  firstpost.md  second_post.md
docs/javascripts/: newsletter.js  posthog-script.js
docs/marimo/marimo-demo/: index.html
docs/projects/: index.md
docs/projects/our-planner/: index.md
docs/projects/pyccpm/: index.md
docs/stylesheets/: extra.css  newsletter.css
hooks/: socialmedia.py
marimo/: hello_world.json  hello_world.py
worker-csp/: index.js  wrangler.toml
(+78 files in other folders)
