[project]
name = "mkdocs-blog-offline-main"
version = "0.1.0"
requires-python = ">=3.13.3"
dependencies = [
    "jinja2~=3.0",
    "markdown~=3.2",
    "mkdocs~=1.6",
    "mkdocs-material[imaging]~=9.6.14",
    "mkdocs-material-extensions~=1.3",
    "pygments~=2.16",
    "pymdown-extensions~=10.2",
    # Requirements for plugins
    "babel~=2.10",
    "colorama~=0.4",
    "paginate~=0.5",
    "regex>=2022.4",
    "requests~=2.26",
    # Additional Material and MkDocs plugins
    "mkdocs-glightbox~=0.4.0",
    "mkdocs-get-deps~=0.2.0",
    "mkdocs-minify-plugin~=0.8.0",
    "mkdocs-git-committers-plugin-2~=2.4.1",
    "mkdocs-git-revision-date-localized-plugin~=1.3.0",
    "mkdocs-rss-plugin~=1.16.0",
    "mkdocs-marimo>=0.2.1",
    "fontawesomefree>=6.6.0",
]
